# selenium-notion-autofill

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  MANIFEST.in  README.md  config.py  main.py  mise.toml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
docs/: API.md  DEVELOPMENT.md
src/selenium_notion_autofill/: __init__.py  __main__.py  config.py
src/selenium_notion_autofill/utils/: __init__.py  notion_helper.py  selenium_helper.py  session_helper.py
tests/: __init__.py  test_config.py  test_main.py  test_mise_config.py  test_notion_helper.py  test_notion_helper_extra.py  test_selenium_helper.py  test_session_helper.py
utils/: notion_helper.py  session_helper.py
