[project]
name = "notion-selenium-autofill"
version = "0.1.0"
description = "Selenium automation that reads from Notion and fills web forms"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.20.0",
    "notion-client>=2.2.0",
    "pandas>=2.2.0",
    "webdriver-manager>=4.0.0",
    "httpx>=0.27.0",          # ← Added
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0"
]

[project.scripts]
autofill = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "main"]
packages = ["utils"]

[tool.ruff]
exclude = ["**/.venv/**"]

[tool.uv]
package = true
# Removed invalid `dependency-groups` layout for strict schema compatibility.
# Use `project.optional-dependencies` for declaring optional/dev dependencies.