[project]
name = "selenium-notion-autofill"
version = "0.1.0"
description = "Selenium automation that reads from Notion and fills web forms"
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.20.0",
    "notion-client>=2.2.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",          # ← Added
    "webdriver-manager>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
autofill = "selenium_notion_autofill.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ["**/.venv/**", "**/tests/**", "**/build/**"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/selenium_notion_autofill --cov-report=html --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/selenium_notion_autofill"]
omit = ["**/tests/**"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]
